migrate to java 12, replaced with a new switch